--- a/Research/计算机/{3}_技术栈/安卓开发.md
+++ b/Research/计算机/{3}_技术栈/安卓开发.md
@@ -1817,7 +1817,190 @@ class MainActivity : AppCompatActivity() {
 - `Dialog` 会使得目的内容展示在之前的内容上方
 - `Activity` 会退出导航图所在的 Activity, 启动一个与导航组件分开管理的新 Android 活动
 
+### androidx 可重用视图(RecycleView)
+
+> [!cite]
+> [RecyclerView源码分析(二)—缓存机制](https://juejin.cn/post/6844904104641167368)
+> [【进阶】RecyclerView源码解析(二)](https://www.jianshu.com/p/e44961f8add5)
+
+`RecycleView` 是一个高度可定制的视图组件, 用于显示大量数据, 支持多种布局, 支持动画, 支持分页加载, 支持数据变化通知, 支持点击事件, 支持拖拽和滑动删除等功能.
+
+`RecycleView` 可以动态的显示大量数据, 通过 `Adapter` 适配器将数据绑定到 `ViewHolder` 视图持有者上, `LayoutManager` 布局管理器控制视图绘制方式, `ItemDecoration` 控制视图左右额外间距, `ItemAnimator` 控制视图动画效果. 同时其内部的 `Recycler` 会通过四级缓存机制来重用视图, 以减少内存开销.
+
+#### `RecycleView` 优化点
+
+- 视图绑定优化
+    - bindViewHolder() 方法运行在 UI 线程, 应避免耗时操作(如日期格式化).
+    - 监听事件可以全局创建一个, 所有视图共用一个监听器, 放在 onCreateViewHolder() 中, 减少对象创建消耗.
+- 数据更新优化
+    - 使用 DiffUtil 进行局部刷新, 尽量避免 notifyDataSetChanged() 全局刷新带来的性能损耗.
+    - 通过 setHasStableIds(true) + 重写 getItemId() 赋予 Item 唯一 ID, 使得焦点固定, 避免数据更新时闪烁.
+- 布局优化
+    - 减少嵌套层级, 降低 layout traversal 的复杂度
+    - 高度固定的视图, 使用 setHasFixedSize(true) 来避免 requestLayout() 浪费资源.
+- 预取与缓存优化
+    - Prefetch 功能(API ≥ 21), 通过 setInitialPrefatchItemCount() 设置预取个数, 优化滑动性能.
+    - 调整 RecyclerView 缓存大小: 默认 cacheView 大小为 2, 可适当增大, 用空间换取时间.
+    - 当多个 RecyclerView 使用相同 Adapter 时, 可通过 setRecycledViewPool() 共用一个 RecycledViewPool, 减少 ViewHolder 创建的开销.
+
+#### `ViewHolder`
+
+视图持有者是一个用于存储实际视图的容器, 用于支持 `RecycleView` 中视图的重用机制, 内部包含了依附的 RecyclerView `mOwnerRecyclerView` 和目前绑定的适配器 `mBindingAdapter`, 视图相关数据(如引用 `itemView`, 类型 `itemViewType`, 位置`mPosition`, 唯一性 ID `mItemId`), 以及用于标记视图状态的标志位 `mFlags`. 同时提供了以下方法, 方便获取视图的信息:
+
+- `getLayoutPosition()`: 获取视图在布局中的位置, 与屏幕展示位置一致. 可能由于适配器新数据没处理和展示完导致与适配器实际位置不一致.
+- `getBindingAdapterPosition()`: 获取视图在所绑定的直接适配器中的内部相对位置. 可能由于 `notifyDataSetChanged()` 等方法导致位置失效.
+- `getAbsoluteAdapterPosition()`: 获取视图在整个 `RecyclerView` 中顶层适配器中的绝对位置.
+
+#### `Adapter`
+
+适配器是数据源和视图之间的桥梁, 使用时需要继承 `RecyclerView.Adapter` 类, 同时实现一些必须或定制的方法:
+
+- `onCreateViewHolder()`: 必须, 通过提供的视图类型(整型值)创建新的 `ViewHolder` 视图持有者, 视图类型来自于 `getItemViewType()` 方法, 可以控制展示不同的视图.
+- `onBindViewHolder()`: 必须, 通过提供的位置, 将数据绑定到 `ViewHolder` 视图持有者上, 用于更新视图的展示内容.
+- `getItemCount()`: 必须, 返回数据集的大小, 用于确定需要展示多少个视图.
+- `getItemViewType()`: 可选, 返回视图类型(整型值), 用于创建不同的视图.
+- `onViewAttachedToWindow()`: 可选, 当视图被添加到窗口时调用, 可以重新启动动画或之前停止的动作等.
+- `onViewRecycled()`: 可选, 当视图被回收时调用, 可以清除旧图片资源, 监听器等, 优化资源占用和内存泄漏.
+- `registerAdapterDataObserver()`: 可选, 注册数据变化监听器, 比如空数据时显示空视图, 数据加载失败时显示错误视图等.
+- `onAttachedToRecyclerView()`: 可选, 当适配器附加到 `RecyclerView` 时调用, 可以为当前适配器设置特定的 `RecyclerView` 功能, 如更换滑动对齐方式等.
+
+此外, 适配器还提供了一些可以外部调用的方法, 用于通知数据变化或设置状态:
+
+- `notifyDataSetChanged()`: 通知数据集发生变化, 重新绑定所有数据.
+- `notifyItemRangeChanged()`: 通过提供的数据起始位置, 数据数量, 通知此范围内的数据发生变化, 重新绑定数据. 此外可以通过 `payloads` 参数, 通知部分数据发生变化, 进行更精细化的数据更新.
+- `notifyItemRangeInserted()`: 通过提供的数据起始位置, 数据数量, 通知此范围内的数据为新插入的数据, 实现数据插入效果.
+- `notifyItemRangeRemoved()`: 通过提供的数据起始位置, 数据数量, 通知此范围内的数据被移除, 实现数据删除效果.
+- `setStateRestorationPolicy()`: 设置状态恢复策略, 用于控制视图状态的恢复, 默认为 `ALLOW`, 可以设置为 `PREVENT` 阻止状态恢复, 或者 `PREVENT_WHEN_EMPTY` 当数据为空时阻止状态恢复, 有数据后再恢复状态.
+
+#### `LayoutManager`
+
+布局管理器是用于控制 `RecyclerView` 中视图的布局方式, 常见的布局方式有:
+
+- `LinearLayoutManager`: 线性布局管理器, 支持垂直和水平两种布局方式. 一般用于可滑动查看的列表数据展示.
+- `GridLayoutManager`: 网格布局管理器, 支持网格布局方式, 可以设置列数. 一般用于网格数据展示.
+- `StaggeredGridLayoutManager`: 瀑布流布局管理器, 支持瀑布流布局方式, 可以设置列数和方向. 一般用于大小不一, 或高度和宽度不均的数据展示.
+
+布局路径:
+
+- 测量: `RecyclerView.OnMeasure` -> `RecyclerView.LayoutManager` -> `LayoutManager.onMeasure` -> `RecyclerView.setMeasuredDimension`
+- 布局: `RecyclerView.OnLayout` -> `RecyclerView.dispatchLayoutStep1` -> `RecyclerView.dispatchLayoutStep2` -> `LayoutManager.onLayoutChildren` -> `RecyclerView.dispatchLayoutStep3`
+    - `dispatchLayoutStep1`: 对应 `STEP_START` 布局状态
+        - 收集动画数据: 记录条目在布局前的状态（位置、属性）, 为比较新旧状态生成动画提供依据;
+        - 处理预测性布局: 预测条目在最终布局中的位置, 确保动画（如移动、删除）平滑过渡;
+        - 协调适配器变更: 解析数据变化, 确定需要执行的动画类型, 并初始化相关上下文.
+    - `dispatchLayoutStep2`: 对应 `STEP_LAYOUT` 布局状态
+        - 数据同步与实际布局: 应用所有数据变更, 完成子视图的最终布局;
+        - 状态恢复: 确保配置变更(如横竖屏切换)后恢复滚动位置等状态;
+        - 动画准备: 为 dispatchLayoutStep3() 的动画阶段提供正确的布局信息(如最终位置).
+    - `dispatchLayoutStep3`: 对应 `STEP_ANIMATIONS` 布局状态
+        - 动画执行: 根据新旧数据和布局信息差异, 触发条目增删改动画(如移动、渐变、交叉动画);
+        - 资源回收: 清理不可见或废弃的视图, 优化内存使用;
+        - 状态重置: 重置 RecyclerView 恢复到稳定状态, 为下次布局做准备;
+        - 回调与通知: 完成布局后的事件回调(如滚动、焦点恢复).
+- 绘制: `RecyclerView.draw` -> `View.draw` -> `RecyclerView.onDraw` -> `ItemDecoration.onDraw` -> `View.dispatchDraw`(子视图绘制)
+
+自定义布局管理器时需要继承 `RecyclerView.LayoutManager` 类, 同时实现一些必须或定制的方法(目前只是一部分, 后续遇到需要自定义布局时再完善):
+
+- `onLayoutChildren()`: 必须, 用于布局子视图, 通过提供的 `RecyclerView.Recycler` 回收池和 `RecyclerView.State` 状态, 布局子视图, 用于初始化和更新视图.
+- `onMeasure()`: 
+- `isAutoMeasureEnabled()`: 可选, 返回是否启用自动测量, 默认为 false.
+- `supportsPredictiveItemAnimations()`: 可选, 返回是否支持预测项动画, 默认为 false.
+- `collectAdjacentPrefetchPositions()`: 可选, 收集相邻预取位置, 用于提前加载视图, 只在启用预取时调用, 默认为空实现.
+- `collectInitialPrefetchPositions()`: 可选, 收集初始预取位置, 用于提前加载视图, 只在启用预取时调用, 默认为空实现.
+- `onAttachedToWindow()`: 可选, 当布局管理器附加到 `RecyclerView` 时调用, 可以为当前布局管理器设置特定的 `RecyclerView` 功能, 如更换滑动对齐方式等.
+- `onDetachedFromWindow()`: 可选, 当布局管理器从 `RecyclerView` 分离时调用, 可以清除旧图片资源, 监听器等, 优化资源占用和内存泄漏.
+
+此外, 布局管理器还提供了一些可以外部调用的方法, 用于控制视图的布局方式:
+
+- `setItemPrefetchEnabled()`: 设置是否启用预取, 用于提前加载视图, 默认为 true.
+
+#### `ItemDecoration`
+
+用于在 `RecyclerView` 中为子视图添加边距或装饰.
+
+- `getItemOffsets()`: 用于为子视图添加边距, 通过提供的 `Rect` 对象, 为子视图设置上下左右的边距. 注意 子视图并不知道自己的边距, 即其并不在子视图 padding 计算中.
+- `onDraw()`: 用于在子视图上绘制装饰, 通过提供的 `Canvas` 画布对象, 在子视图上绘制装饰.
+- `onDrawOver()`: 用于在子视图上绘制装饰, 通过提供的 `Canvas` 画布对象, 在子视图上绘制装饰, 与 `onDraw()` 方法不同的是, `onDrawOver()` 方法绘制的装饰会覆盖在子视图上, 不会影响子视图的点击事件.
+
+#### `ItemAnimator`
+
+`RecyclerView.ItemAnimator` 用于在 `RecyclerView` 中展示视图不同状态变更时的动画效果, 通过 `animateAppearance()`, `animateChange()`, `animatePersistence()`, `animateDisappearance()` 四个方法控制, 通过 `runPendingAnimations()` 方法来执行动画效果. 每个方法都会提供 `RecyclerView.ViewHolder` 视图持有者和 `ItemHolderInfo` 信息, 用于为视图设置动画效果. `SimpleItemAnimator` 是 `ItemAnimator` 的再封装, 提供了更移动的 API.
+
+- `animateAppearance()`: 视图出现在屏幕时的动画效果.
+- `animateDisappearance()`: 视图从屏幕消失的动画效果.
+- `animatePersistence()`: 视图布局改变(数据没改变)时的动画效果.
+- `animateChange()`: 视图数据改变时的动画效果.
+- `runPendingAnimations()`: 执行所有等待的动画效果.
+
+#### `Recycler`
+
+回收池用于管理 `RecyclerView` 缓存和回收的 `ViewHolder`, 以支持其视图重用机制.
+
+存(插入或删除):  `mAttachedScrap`
+存(滑动): `mChangedScrap` -> `mCachedViews`
+
+- `mAttachedScrap`: 一级缓存, 用于存储因为布局改变暂时回收的视图持有者.
+- `mChangedScrap`: 一级缓存, 用于存储因为数据改变暂时回收的视图持有者.
+- `mCachedViews`: 二级缓存, 用于存储完全脱离屏幕布局, 且可以直接重用的视图持有者.
+- `mViewCacheExtension`: 三级缓存, 用户自定义的扩展缓存, 直接存储对应位置和类型的视图 `View`. 默认无.
+- `mRecyclerPool`: 四级缓存, 可自定义的, 能支持用于多个 `RecyclerView` 的全局化缓存池, 存储和管理 `ScrapData` 数据结构. 默认不共享, 单 `RecyclerView` 使用.
+
+#### 基本使用
+
+```kotlin
+val recyclerView: RecyclerView = findViewById(R.id.recycler_view)
+val dataset = arrayOf("January", "February", "March")
+val adapter = CustomAdapter(dataset)
+val itemDecoration = DividerItemDecoration(this, DividerItemDecoration.VERTICAL)
+recyclerView.adapter = adapter
+recyclerView.layoutManager = LinearLayoutManager(this)
+recyclerView.addItemDecoration(itemDecoration)
+
+data class DataClass(
+    val text: String,
+    val viewType: Int
+    )
+
+class CustomAdapter(private val dataset: Array<DataClass>) : RecyclerView.Adapter<CustomAdapter.ViewHolder>() {
+    class ViewHolder(val textView: TextView) : RecyclerView.ViewHolder(textView)
+
+    override fun onCreateViewHolder(parent: ViewGroup, viewType: Int): ViewHolder {
+        val textView = TextView(parent.context)
+
+        return when (viewType) {
+            0 -> ViewHolder(textView)
+            1 -> ViewHolder(textView)
+            2 -> ViewHolder(textView)
+            else -> ViewHolder(textView)
+        }
+    }
+
+    override fun onBindViewHolder(holder: ViewHolder, position: Int) {
+        holder.textView.text = dataset[position].text
+    }
+
+    override fun onBindViewHolder(holder: ViewHolder, position: Int, payloads: MutableList<Any>
+    ) {
+        if (payloads.isEmpty()) {
+            super.onBindViewHolder(holder, position, payloads)
+        } else {
+            val item = payloads[0] as DataClass
+            holder.textView.text = item.text
+        }
+    }
+
+    override fun getItemViewType(position: Int): Int {
+        return dataset[position].viewType
+    }
+
+    override fun getItemCount() = dataset.size
+}
+
+```
+
 ### androidx 分页组件(paging)
+
+
 
 ### 自定义视图
 
@@ -1860,9 +2043,9 @@ val myView = MyView(context).apply {
 }
 ```
 
-- 重写 `override fun onMeasure(widthMeasureSpec: Int, heightMeasureSpec: Int)` 方法, 在其中测量自定义 View 的大小
-- 重写 `override fun onDraw(canvas: Canvas?)` 方法, 在其中绘制自定义 View 的内容
-- 重写 `override fun onLayout(changed: Boolean, left: Int, top: Int, right: Int, bottom: Int)` 方法, 在其中布局自定义 View 的子 View
+- 重写 `override fun onMeasure(widthMeasureSpec: Int, heightMeasureSpec: Int)` 方法, 在其中测量自定义 View 及其子 View 的大小, 并通过 `setMeasuredDimension(width, height)` 方法设置自定义 View 的最终大小.
+- 重写 `override fun onLayout(changed: Boolean, left: Int, top: Int, right: Int, bottom: Int)` 方法, 由 ViewGroup 调用, 在其中布局确定自定义 View 及其子 View 在父布局中的位置.
+- 重写 `override fun onDraw(canvas: Canvas?)` 方法, 在其中绘制自定义 View 的内容, 一般通过 `Canvas` 对象来绘制图形, 文字, 图片等.
 - 重写 `override fun onTouchEvent(event: MotionEvent?): Boolean` 方法, 在其中处理自定义 View 的触摸事件
 
 #### `onMeasure` 方法
