--- a/Research/计算机/{3}_技术栈/安卓开发.md
+++ b/Research/计算机/{3}_技术栈/安卓开发.md
@@ -1998,6 +1998,52 @@ class CustomAdapter(private val dataset: Array<DataClass>) : RecyclerView.Adapte
 
 ```
 
+#### 扩展 DiffUtil
+
+`DiffUtil` 是一个用于计算两个数据集之间差异的工具类, 通过 `DiffUtil.Callback` 回调类, 用于提供两个数据集的比较, 以及如何更新数据集的方法. `DiffUtil` 会通过 `calculateDiff()` 方法计算两个数据集之间的差异, 并返回一个 `DiffUtil.DiffResult` 对象, 用于通过 `dispatchUpdatesTo` 自动调用 `Adapter` 的更新方法.
+
+- `getOldListSize()`: 返回旧数据集的大小.
+- `getNewListSize()`: 返回新数据集的大小.
+- `areItemsTheSame()`: 返回两个数据集中的数据是否相同.
+- `areContentsTheSame()`: 返回两个数据集中的数据内容是否相同.
+- `getChangePayload()`: 返回两个数据集中的数据内容差异.
+- `dispatchUpdatesTo()`: 通过提供的 `Adapter` 对象, 自动调用 `Adapter` 的更新方法.
+
+```kotlin
+data class DataClass(
+    val text: String,
+    val viewType: Int
+    )
+
+class CustomAdapter(private var dataset: List<DataClass>) : RecyclerView.Adapter<CustomAdapter.ViewHolder>() {
+    class ViewHolder(val textView: TextView) : RecyclerView.ViewHolder(textView)
+
+    fun updateData(newData: List<DataClass>) {
+        val diffResult = DiffUtil.calculateDiff(object : DiffUtil.Callback() {
+            override fun getOldListSize() = dataset.size
+            override fun getNewListSize() = newData.size
+            override fun areItemsTheSame(oldItemPosition: Int, newItemPosition: Int) =
+                dataset[oldItemPosition] == newData[newItemPosition]
+            override fun areContentsTheSame(oldItemPosition: Int, newItemPosition: Int) =
+                dataset[oldItemPosition] == newData[newItemPosition]
+        })
+        dataset = newData
+        diffResult.dispatchUpdatesTo(this)
+    }
+
+    override fun onCreateViewHolder(parent: ViewGroup, viewType: Int): ViewHolder {
+        val textView = TextView(parent.context)
+        return ViewHolder(textView)
+    }
+
+    override fun onBindViewHolder(holder: ViewHolder, position: Int) {
+        holder.textView.text = dataset[position].text
+    }
+
+    override fun getItemCount() = dataset.size
+}
+```
+
 ### androidx 分页组件(paging)
 
 
