--- a/Research/计算机/{3}_技术栈/安卓开发.md
+++ b/Research/计算机/{3}_技术栈/安卓开发.md
@@ -2046,7 +2046,304 @@ class CustomAdapter(private var dataset: List<DataClass>) : RecyclerView.Adapter
 
 ### androidx 分页组件(paging)
 
+`Paging` 是基于 `RecyclerView` 和 `Flow` 的专注于分页数据加载的库, 与 `RecyclerView` 解耦, 同时提供了标准化的分页生命周期管理, 开发者只需关注数据加载规则.
 
+- 引入 `PagingSource<Key : Any, Value : Any>` 将数据源抽象为响应式数据流.
+    - 泛型参数 `<Key, Value>`: `Key` 用于唯一页码标识, `Value` 用于表示数据项类型.
+    - `load(params: LoadParams<Key>)`: 指定如何从数据源中加载特定页的数据, 并返回一个分页数据结果 `LoadResult`.
+    - `LoadParams<Key>`: 封装加载请求参数的密封类, 包含请求加载的项目数量 `loadSize`, 是否启用了占位符 `placeholdersEnabled`, 请求加载的页码标识 `key`. 具体类型 `Refresh`: 刷新, `Prepend`: 前一页, `Append`: 后一页.
+    - `LoadResult<Key, Value>`: 封装加载结果的密封类. 分具体类型 `Error(throwable: Throwable)`: 加载失败, 携带异常信息; `Invalid`: 无效加载, 终止请求数据源, 并自动触发 `invalidate()`; `Page(data: List<Value>, prevKey: Key?, nextKey: Key?), itemsBefore: Int, itemsAfter: Int`: 加载成功, 携带数据列表, 前一页码, 后一页码, 前面的数据数量, 后面的数据数量.
+
+- 引入 `RemoteMediator<Key : Any, Value : Any>` 实现本地缓存与远程数据源之间的协同工作.
+    - `load(loadType: LoadType, state: PagingState<Key, Value>)`: 核心方法，响应分页边界条件/刷新事件，返回加载结果 `MediatorResult`
+    - `LoadType`: 加载类型, `REFRESH`: 刷新, `PREPEND`: 前一页, `APPEND`: 后一页
+    - `PagingState<Key, Value>`: 分页系统的数据状态快照, 内部包含已加载的分页数据列表 `pages`, 最近访问的列表位置 `anchorPosition`, 初始化数据流时的配置 `config`, 首项前的占位符数量 `leadingPlaceholderCount`.
+    - `MediatorResult`: 封装加载结果的密封类. 分具体类型 `Error(throwable: Throwable)`: 加载失败, 携带异常信息; `Success(endOfPaginationReached: Boolean)`: 加载成功, 携带是否到达分页末尾; 
+
+, 通过 `load()` 方法从远程数据源加载数据, 并返回加载状态 `MediatorResult`, 数据按需缓存到本地数据库.
+
+- 引入 `Pager` 分页器, 用于结合 `PagingSource`, `RemoteMediator` 和相关配置, 并创建 `PagingData` 数据冷流 `Flow`.
+    - 通过 `PagingConfig` 配置分页加载数据的参数, 如初始加载数量 `initialLoadSize`, 后续每页加载数量 `pageSize`, 预加载距离 `prefetchDistance`, 
+    
+    注意当 `initialLoadSize` 和 `pageSize` 相等时才能固定初始加载数量.
+    - 通过 `
+    引入了 `PagingData` 用于表示分页数据, 通过 `Flow` 传递, 包含分页数据和加载状态.
+    - 注意冷流获取的 `PagingData` 实例不能重复使用(消费), 不然可能会出错. 获取新实例可以通过 `PagingDataAdapter.refresh()` 方法. 重用旧实例的需求, 可以在使用 `Flow` 时通过 `cachedIn()` 方法进行缓存和多播, 确保每个观察者拿到一个新的、独立的 `PagingData` 实例.
+
+- 统一的用于 `RecyclerView` 的适配器基类 `PagingDataAdapter`, 实现数据绑定和自动 Diff 计算, 同时支持设置头部和尾部适配器, 以及加载状态适配器.
+    - 硬性要求传递 `DiffUtil.ItemCallback` 对象, 用于计算数据差异.
+    - `submitData` 方法用于提交新的 `PagingData` 数据, 以此自动计算数据差异, 更新视图.
+    - `retry` 方法用于重试加载失败 `LoadState.Error` 的数据.\
+    - `refresh` 方法用于重新加载数据(如下拉刷新).
+    - `getItem` 方法用于获取指定位置的数据, 数据类型对应创建 `PagingDataAdapter` 时的泛型类型.
+    - `loadStateFlow` 属性用于监听分页数据的加载状态 `LoadState` 的 `StateFlow` 热数据流.
+    - `onPagesUpdatedFlow` 属性用于监听分页页面结构变化的 `SharedFlow` 热数据流.
+    - `withLoadStateHeaderAndFooter` 基于 `ConcatAdapter`, `LoadState` 和 `LoadStateAdapter` 实现头部和尾部适配器的设置. 可自动处理加载状态的显示和隐藏.
+- 引入加载状态 `LoadState: 加载中, 没加载, 失败`, 用于实现 UI 状态与数据的同步更新.
+
+#### 使用示例
+
+```kotlin
+// 相关依赖
+// implementation "androidx.paging:paging-runtime-ktx:3.1.1"
+// implementation "androidx.paging:paging-compose:3.1.1" // 如果使用 Compose
+// implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+// implementation "androidx.room:room-ktx:2.5.2"
+// kapt "androidx.room:room-compiler:2.5.2"
+// implementation "com.squareup.retrofit2:retrofit:2.9.0"
+
+// 数据模型 & API 定义
+data class ApiResponse(
+    val items: List<Item>,
+    val nextPage: Int?
+)
+
+@Entity(tableName = "items")
+data class Item(
+    @PrimaryKey val id: String,
+    val name: String,
+    val page: Int // 记录所属页码用于分页
+)
+
+interface ApiService {
+    @GET("items")
+    suspend fun getItems(
+        @Query("page") page: Int,
+        @Query("size") size: Int
+    ): ApiResponse
+}
+
+// 数据库 & DAO 定义
+@Database(entities = [Item::class], version = 1)
+abstract class AppDatabase : RoomDatabase() {
+    abstract fun itemDao(): ItemDao
+}
+
+@Dao
+interface ItemDao {
+    @Query("SELECT * FROM items ORDER BY page ASC")
+    fun getPagingSource(): PagingSource<Int, Item>
+
+    @Insert(onConflict = OnConflictStrategy.REPLACE)
+    suspend fun insertAll(items: List<Item>)
+
+    @Query("DELETE FROM items")
+    suspend fun clearAll()
+}
+
+// RemoteMediator (协调本地/远程)
+class ItemRemoteMediator(
+    private val api: ApiService,
+    private val db: AppDatabase
+) : RemoteMediator<Int, Item>() {
+
+    override suspend fun load(
+        loadType: LoadType,
+        state: PagingState<Int, Item>
+    ): MediatorResult {
+        try {
+            // 根据加载类型计算下一页页码
+            val page = when (loadType) {
+                LoadType.REFRESH -> 1
+                LoadType.PREPEND -> return MediatorResult.Success(endOfPaginationReached = true)
+                LoadType.APPEND -> {
+                    val lastItem = state.lastItemOrNull()
+                    lastItem?.page?.plus(1) ?: 1
+                }
+            }
+
+            // 从网络加载数据
+            val response = api.getItems(page, state.config.pageSize)
+            
+            // 写入数据库
+            db.withTransaction {
+                if (loadType == LoadType.REFRESH) {
+                    db.itemDao().clearAll()
+                }
+                db.itemDao().insertAll(response.items.map { it.copy(page = page) })
+            }
+
+            return MediatorResult.Success(
+                endOfPaginationReached = response.nextPage == null
+            )
+        } catch (e: Exception) {
+            return MediatorResult.Error(e)
+        }
+    }
+}
+
+// 实现 Adapter
+class ItemAdapter : PagingDataAdapter<Item, ItemViewHolder>(ITEM_COMPARATOR) {
+
+    companion object {
+        private val ITEM_COMPARATOR = object : DiffUtil.ItemCallback<Item>() {
+            override fun areItemsTheSame(oldItem: Item, newItem: Item): Boolean =
+                oldItem.id == newItem.id
+
+            override fun areContentsTheSame(oldItem: Item, newItem: Item): Boolean =
+                oldItem == newItem
+        }
+    }
+
+    override fun onCreateViewHolder(parent: ViewGroup, viewType: Int): ItemViewHolder {
+        val view = LayoutInflater.from(parent.context).inflate(R.layout.item_layout, parent, false)
+        return ItemViewHolder(view)
+    }
+
+    override fun onBindViewHolder(holder: ItemViewHolder, position: Int) {
+        val item = getItem(position)
+        holder.bind(item)
+    }
+}
+
+// 头部适配器（静态内容）
+class HeaderAdapter : RecyclerView.Adapter<HeaderAdapter.HeaderViewHolder>() {
+
+    override fun onCreateViewHolder(parent: ViewGroup, viewType: Int): HeaderViewHolder {
+        val view = LayoutInflater.from(parent.context)
+            .inflate(R.layout.item_header, parent, false)
+        return HeaderViewHolder(view)
+    }
+
+    override fun onBindViewHolder(holder: HeaderViewHolder, position: Int) {
+        holder.bind("List Header")
+    }
+
+    override fun getItemCount(): Int = 1 // 只显示一个头部项
+
+    class HeaderViewHolder(view: View) : RecyclerView.ViewHolder(view) {
+        fun bind(text: String) {
+            itemView.findViewById<TextView>(R.id.headerText).text = text
+        }
+    }
+}
+
+// 页脚适配器（动态加载状态）
+class FooterAdapter(private val retry: () -> Unit) : RecyclerView.Adapter<FooterAdapter.FooterViewHolder>() {
+
+    private var loadState: LoadState = LoadState.NotLoading(endOfPaginationReached = false)
+
+    fun setLoadState(newState: LoadState) {
+        val previousState = loadState
+        loadState = newState
+        when {
+            // 使用 DiffUtil 简化状态更新
+            previousState is LoadState.Loading && newState is LoadState.NotLoading -> 
+                notifyItemRemoved(0)
+            newState is LoadState.Loading -> 
+                notifyItemInserted(0)
+            previousState.endOfPaginationReached != newState.endOfPaginationReached -> 
+                notifyItemChanged(0)
+        }
+    }
+
+    override fun onCreateViewHolder(parent: ViewGroup, viewType: Int): FooterViewHolder {
+        val view = LayoutInflater.from(parent.context)
+            .inflate(R.layout.item_footer, parent, false)
+        return FooterViewHolder(view, retry)
+    }
+
+    override fun onBindViewHolder(holder: FooterViewHolder, position: Int) {
+        holder.bind(loadState)
+    }
+
+    override fun getItemCount(): Int = if (loadState is LoadState.NotLoading && loadState.endOfPaginationReached) 0 else 1
+
+    class FooterViewHolder(view: View, retry: () -> Unit) : RecyclerView.ViewHolder(view) {
+        private val progressBar = view.findViewById<ProgressBar>(R.id.progressBar)
+        private val errorText = view.findViewById<TextView>(R.id.errorText)
+        private val retryButton = view.findViewById<Button>(R.id.retryButton)
+
+        init {
+            retryButton.setOnClickListener { retry() }
+        }
+
+        fun bind(loadState: LoadState) {
+            when (loadState) {
+                is LoadState.Loading -> {
+                    progressBar.visibility = View.VISIBLE
+                    errorText.visibility = View.GONE
+                    retryButton.visibility = View.GONE
+                }
+                is LoadState.Error -> {
+                    progressBar.visibility = View.GONE
+                    errorText.text = loadState.error.localizedMessage
+                    errorText.visibility = View.VISIBLE
+                    retryButton.visibility = View.VISIBLE
+                }
+                is LoadState.NotLoading -> {
+                    progressBar.visibility = View.GONE
+                    errorText.visibility = View.GONE
+                    retryButton.visibility = View.GONE
+                }
+            }
+        }
+    }
+}
+
+// 在 ViewModel 中配置 Pager
+class ItemViewModel(
+    private val api: ApiService,
+    private val db: AppDatabase
+) : ViewModel() {
+
+    val pagingDataFlow = Pager(
+        config = PagingConfig(
+            pageSize = 20,
+            prefetchDistance = 5,
+            enablePlaceholders = false
+        ),
+        remoteMediator = ItemRemoteMediator(api, db),
+        pagingSourceFactory = { db.itemDao().getPagingSource() }
+    ).flow.cachedIn(viewModelScope)
+}
+
+// 在 Activity/Fragment 中使用
+class MainActivity : AppCompatActivity() {
+    private lateinit var viewModel: ItemViewModel
+    private val headerAdapter = HeaderAdapter()
+    private val itemAdapter = ItemAdapter()
+    private val footerAdapter = FooterAdapter { itemAdapter.retry() } // 重试时触发分页重载
+
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+        setContentView(R.layout.activity_main)
+
+        // 使用 ConcatAdapter 组合三个 Adapter
+        val concatAdapter = ConcatAdapter(
+            headerAdapter,
+            itemAdapter.withLoadStateHeaderAndFooter(
+                header = FooterAdapter { itemAdapter.retry() },
+                footer = footerAdapter
+            )
+        )
+
+        val recyclerView = findViewById<RecyclerView>(R.id.recycler_view)
+        recyclerView.adapter = concatAdapter
+
+        // 监听分页数据（保持原有逻辑）
+        lifecycleScope.launch {
+            repeatOnLifecycle(Lifecycle.State.STARTED) {
+                viewModel.pagingDataFlow.collectLatest { pagingData ->
+                    itemAdapter.submitData(pagingData)
+                }
+            }
+        }
+
+        // 监听加载状态并更新 Footer
+        itemAdapter.addLoadStateListener { loadStates ->
+            footerAdapter.setLoadState(loadStates.append) // 监听追加状态
+
+            // 原有全局状态处理保持不变
+            when (loadStates.refresh) {
+                is LoadState.Loading -> showLoading()
+                is LoadState.Error -> showError((loadStates.refresh as LoadState.Error).error)
+                is LoadState.NotLoading -> hideLoading()
+            }
+        }
+    }
+}
+```
 
 ### 自定义视图
 
