--- a/Research/计算机/{3}_技术栈/安卓开发.md
+++ b/Research/计算机/{3}_技术栈/安卓开发.md
@@ -4571,3 +4571,99 @@ RePlugin 包含编译时和运行时两部分, 同时又区分了宿主和插件
 ##### replugin-plugin-gradle (插件插件)
 
 ##### replugin-plugin-lib (插件库)
+
+### Shadow 解析
+
+腾讯开源的一个 Android 插件化框架.
+
+#### 设计理念
+
+#### 使用介绍
+
+#### 源码解析
+
+SDK 结构
+
+```text
+├── projects
+│   ├── sdk // 框架代码
+│   │   ├── coding
+│   │   │   ├── aar-to-jar-plugin
+│   │   │   ├── android-jar
+│   │   │   ├── code-generator
+│   │   │   ├── common-jar-settings
+│   │   │   ├── get-android-jar
+│   │   │   ├── java-build-config
+│   │   ├── core
+│   │   │   ├── activity-container // 插件 Activity 容器
+│   │   │   ├── common // 一些公共的工具类
+│   │   │   ├── gradle-plugin // gradle 插件
+│   │   │   ├── load-parameters // 插件加载参数
+│   │   │   ├── loader // 负责加载插件
+│   │   │   ├── manager // 装载插件，管理插件
+│   │   │   ├── runtime // 插件运行时需要，包括占位 Activity，占位 Provider 等等
+│   │   │   ├── transform // Transform 实现，用于替换插件 Activity 父类等等
+│   │   │   └── transform-kit // Transform 工具类
+│   │   └── dynamic // 插件自身动态化实现，包括一些接口的抽象
+│   │   │   ├── dynamic-apk
+│   │   │   ├── dynamic-host
+│   │   │   ├── dynamic-host-multi-loader-ext
+│   │   │   ├── dynamic-loader
+│   │   │   ├── dynamic-loader-impl
+│   │   │   ├── dynamic-manager
+│   │   │   └── dynamic-manager-multi-loader-ext
+```
+
+项目结构
+
+```text
+├── projects
+│   ├── host // 宿主
+│   ├── host-lib // 宿主库
+│   ├── contract // 宿主和插件之间的契约
+│   ├── constant // 常量
+│   ├── manager // 插件管理器
+│   ├── plugin // 插件
+│   │   ├── loader // 插件加载器
+│   │   ├── runtime // 插件运行时
+│   │   ├── business_lib // 业务库
+│   │   ├── business_app // 业务 app
+│   │   ├── business_plugin // 业务插件
+```
+
+Shadow 包含编译时和运行时两部分, 同时又区分了宿主和插件两种不同的角色.
+
+编译时宿主会通过 `core/gradle-plugin` 中 的 `ShadowPlugin` 插件自动生成插件化框架所需的配置文件, 插件信息, 辅助类文件等.
+
+编码时:
+
+- 依赖 `com.tencent.shadow.core:common` 和 `com.tencent.shadow.dynamic:dynamic-host`
+- `AndroidManifest.xml`
+    - 自定义和注册 `PluginProcessService` 类型的插件进程服务, 用于管理插件加载过程, 每个插件进程都需要注册一个.
+    - 自定义和注册 `PluginLoadActivity`, 用于承接插件加载逻辑.
+    - 自定义和注册 `XxxxxProxyActivity`, 为插件内业务 Activity 进行系统事件转发和处理, 可以有多个, 每个是不同的启动模式.
+    - 自定义和注册 `MainProcessManagerReceiver` 接收器, 用于接收插件进程加载相关的的广播消息.
+    - 注册 `PluginContainerContentProvider` 用于跨进程通信.
+- `Application`
+    - `onCreate`:
+        - 如果是插件进程, 则恢复上次加载的插件进程的 runtime 信息, 主要是重新调整 classloader.
+        - 如果是宿主进程, 则初始化插件框架, 管理插件加载器, 以及其他 SDK 相关的初始化.
+            - 通过 Provider 为插件提供宿主的可共享资源.
+        - 通过 `PluginManagerProvider` 创建和获取插件管理器(PluginManager)实例
+            - 自定义 `PluginManagerUpdater` 管理插件 apk 文件的更新和安装.
+            - 自定义 `DynamicPluginManager` 管理插件的加载(`enter`)和卸载.
+- `MainActivity`
+    - `onCreate`:
+        - 通过 `PluginManager` 获取插件的 `PluginInfo` 信息, 包括插件的包名, 版本号, 签名信息等.
+
+编译时:
+
+打包时:
+
+- core.common
+- dynamic.host
+
+运行时:
+
+- 宿主加载 Manager 插件
+- Manager 解析插件包.
