--- a/Research/计算机/{3}_技术栈/安卓开发.md
+++ b/Research/计算机/{3}_技术栈/安卓开发.md
@@ -4753,6 +4753,7 @@ RePlugin 包含编译时和运行时两部分, 同时又区分了宿主和插件
     ```
 
 2. `AndroidManifest.xml` 配置
+
     - 自定义和注册 `PluginProcessService` 类型的插件进程服务, 用于管理插件加载过程, 每个插件进程都需要注册一个.
     - 自定义和注册 `PluginLoadActivity`, 用于承接插件加载逻辑.
     - 自定义和注册 `PluginXProxyActivity`, 为插件内业务 Activity 进行系统事件转发和处理, 可以有多个, 每个是不同的启动模式.
@@ -4805,11 +4806,19 @@ RePlugin 包含编译时和运行时两部分, 同时又区分了宿主和插件
         - 提供插件管理器的唯一入口, 插件管理器包含了插件的加载和卸载逻辑, 以及插件的更新和安装逻辑.
             - APP: `Shadow.getPluginManager(apk)`
             - 自定义 `PluginManagerUpdater` 管理插件文件的更新逻辑.
-            - 通过 SDK 的 `DynamicPluginManager` 自动管理插件的更新, 安装和卸载.
+            - 通过 SDK 的 `DynamicPluginManager` 自动管理插件管理器的更新, 安装和卸载.
 
-- `MainActivity`
-    - `onCreate`:
-        - 通过 `PluginManager` 获取插件的 `PluginInfo` 信息, 包括插件的包名, 版本号, 签名信息等.
+4. 启动插件: 基于 `PluginLoadActivity` 发起加载插件的请求(Intent), 通过 Extras 传递插件相关参数.
+
+    - `KEY_PLUGIN_ZIP_PATH`: 插件的 zip 包路径, 本地文件路径.
+    - `KEY_ACTIVITY_CLASSNAME`: 插件内的 Activity 类名, 必须是完整的类名, 如 `com.tencent.shadow.sample.plugin.business.MainActivity`.
+    - `KEY_EXTRAS`: 插件加载时需要给对应目标地的额外参数, Bundle 对象.
+    - `KEY_PLUGIN_PART_KEY`: 插件分区标识, 用于区分相同插件包内的不同插件部分.
+
+5. 插件加载的入口 `PluginLoadActivity` 实现
+
+    - 在 `onCreate` 中获取 Intent 中的插件相关参数, 如插件 zip 包路径, Activity 类名等.
+    - 调用 `PluginProcessService` 的 `startPluginProcess` 方法, 启动插件进程并加载插件.
 
 插件管理器(manager)编写流程
 
